Thu Aug 15 13:00:02 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* variables.c: fixed bug 119699 (missing error on shadowed
	  variable)
	* autogen.sh: removed dependency on automake-1.4, updated
	  links for fetching auto* tools
	* doc/Makefile.am: added check for automatic regeneration of
	  win32/*.def.src when api xml files are updated.

Thu Aug 14 23:15:14 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* transform.c: fixed bug 114563 (params not passed when
	  default template processed)

Thu Aug 14 22:04:37 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* xslt.c: fixed bug 119862 (missing param on ns error print)

Sun Aug 10 00:21:48 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* News configure.in: preparing libxslt-1.0.32 release
	* doc/* : updated the doc and rebuilt

Thu Aug  7 21:02:07 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* breakpoint/Makefile.am: removed ref to libxslt.la
	* numbers.c transform.c python/libxml_wrap.h python/types.c
	  xlstproc/xsltproc.c: Minor cleanup of warning errors

Mon Aug  4 22:43:05 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* doc/libxslt-api.xml doc/* doc/html/*: revuilt the API and docs

Sun Aug  3 21:34:44 EDT 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-127.*
	  tests/general/Makefile.am tests/general/bug-127*: added the
	  test from bug #118763 to the regression suite.

Sun Aug  3 17:40:13 EDT 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: minor change, avoid wasting CPU cycles

Sun Aug 3 21:05:07 HKT 2003 William Brack <wbrack@mmm.com.hk>

	Minor cleanup of regression test general/bug-125

Sun Aug 3 19:46:42 HKT 2003 William Brack <wbrack@mmm.com.hk>

	Fixed bug 116517 - handling of '{' and '}'
	* templates.c: added checks for escaping and balancing of
	  curly brackets
	* tests/general/Makefile.am tests/docs/Makefile.am:
	  Added test case (bug-126) to regression suite.

Sun Aug 3 15:50:51 HKT 2003 William Brack <wbrack@mmm.com.hk>
