@@ -132,6 +132,7 @@ EXTRA_DIST = \
     bug-125.out bug-125.xsl \
     bug-126.out bug-126.xsl \
     bug-127.out bug-127.xsl \
+    bug-128.out bug-128.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
