@@ -1,3 +1,10 @@
+Mod Aug 18 14:42:12 HKT 2003 William Brack <wbrack@mmm.com.hk>
+
+	* keys.c: enhanced xsltInitCtxtKey to take care of multiple
+	  instances of a key with the same namespace:name, reported
+	  on the mailing list by Ian Young.  Added regression test
+	  (bug-128).
+
 Thu Aug 15 13:00:02 HKT 2003 William Brack <wbrack@mmm.com.hk>
 
 	* variables.c: fixed bug 119699 (missing error on shadowed
